--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.idea/.gitignore
+.idea/modules.xml
+.idea/nextjs_youtube_data.iml
+.idea/vcs.xml
+.idea/inspectionProfiles/Project_Default.xml
